<resources>
    <string name="app_name">PubBuddy</string>
    <string name="action_settings">Settings</string>

    <string name="splashScreen">splashScreen</string>
    <string name="accountImage">accountImage</string>

    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="info">Info</string>
    <string name="account">Account</string>

    <string name="minimum_pswd">Password Too Short</string>
    <string name="auth_failed">Authentication Failed</string>

    <string name="addImage">addImage</string>
    <string name="deleteAccount">deleteAccount</string>
    <string name="showEmail">showEmail</string>
    <string name="myAccount">My Account</string>
    <string name="logOut">logOut</string>

    <string name="appWebsite">A few pints a day, keep reality away!</string>
    <string name="appInfo">About App</string>

    <string name="appInfoExtra">
        PubBuddy is an app that lets you keep track of the beers you have enjoyed in the past.
        It can give you some recommendations but you may also create your own list if you wish to do so.
        If you are a signed in user, your added beers are saved and you can update your list at any time in the future.
        Our app has an integrated Google Map system that lets you search your local area or any other areas for pubs
        and even get directions.
    </string>

    <string name="welcome">Welcome!</string>
    <string name="searchBeersLbl">Recommendations</string>
    <string name="beveragesLbl">Todays List</string>
    <string name="beersLabel">Temporary Beer List</string>
    <string name="favouritesBeerLbl">Favourites</string>
    <string name="addABeerLbl">Beer Check In</string>

    <string name="addBeerBtnLbl">Add</string>
    <string name="saveBeerBtn">Save</string>

    <string name="recentlyViewedLbl">List of Beverages</string>

    <string name="beerNameLbl">Name :</string>
    <string name="pubLbl">Pub :</string>
    <string name="beerPriceLbl">Price :</string>
    <string name="beerRatingLbl">Star Rating</string>

    <string name="emptyMessageLbl">You have no beers added</string>
    <string name="deleteBeersLbl">Delete Beers</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="submitButton">Send</string>

    <string name="Google_Maps_API">AIzaSyCe0ICuraK7jdES9XQFgxoucmLMct0izGI</string>
    <string name="Google_Maps_API2">AIzaSyAWZ6t7zFKroRTMwxo8qrM-95WyT2TISJo</string>

</resources>
