<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Add">

    <TextView
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:background="@color/colorPrimaryDark"
        android:paddingTop="5dp"
        android:text="@string/appWebsite"
        android:textColor="@color/colorFontWhite"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/addPriceTV"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:paddingTop="10dp"
        android:text="@string/beerPriceLbl"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541" />

    <TextView
        android:id="@+id/addPubTV"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:paddingTop="10dp"
        android:text="@string/pubLbl"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423" />

    <TextView
        android:id="@+id/addNameTV"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:paddingTop="10dp"
        android:text="@string/beerNameLbl"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <EditText
        android:id="@+id/addNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Enter Beer Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toEndOf="@+id/addNameTV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <EditText
        android:id="@+id/addPriceET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Enter Price"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toEndOf="@+id/addPriceTV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <EditText
        android:id="@+id/addPubET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="Enter Pub"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addPriceET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toEndOf="@+id/addPubTV"
        app:layout_constraintTop_toBottomOf="@+id/addNameET"
        app:layout_constraintVertical_bias="0.842" />

    <RatingBar
        android:id="@+id/addRatingBar"
        android:layout_width="242dp"
        android:layout_height="52dp"
        android:rating="1"
        android:stepSize="0.5"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPriceET"
        app:layout_constraintVertical_bias="0.22" />

    <Button
        android:id="@+id/addBeerBtn"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:drawableTop="@drawable/add48"
        android:onClick="addBeer"
        android:text="@string/addBeerBtnLbl"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRatingBar"
        app:layout_constraintVertical_bias="0.714" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="327dp"
        android:layout_height="73dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="Add a Beer!"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/addNameET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>