<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Edit">

    <TextView
        android:id="@+id/editfooter"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:background="@color/colorPrimaryDark"
        android:paddingTop="5dp"
        android:text="@string/appWebsite"
        android:textColor="@color/colorFontWhite"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/editPriceTV"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:paddingTop="10dp"
        android:text="@string/beerPriceLbl"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editfooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613" />

    <TextView
        android:id="@+id/editPubTV"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:paddingTop="10dp"
        android:text="@string/pubLbl"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editfooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <TextView
        android:id="@+id/editNameTV"
        android:layout_width="99dp"
        android:layout_height="43dp"
        android:paddingTop="10dp"
        android:text="@string/beerNameLbl"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editfooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.344" />

    <EditText
        android:id="@+id/editNameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Beer Name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toEndOf="@+id/editNameTV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <EditText
        android:id="@+id/editPriceET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Price"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toEndOf="@+id/editPriceTV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.572" />

    <EditText
        android:id="@+id/editPubET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="Pub"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addPriceET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toEndOf="@+id/editPubTV"
        app:layout_constraintTop_toBottomOf="@+id/editNameET"
        app:layout_constraintVertical_bias="0.444" />

    <RatingBar
        android:id="@+id/editRatingBar"
        android:layout_width="242dp"
        android:layout_height="52dp"
        android:layout_marginBottom="100dp"
        android:rating="1"
        android:stepSize="0.5"
        app:layout_constraintBottom_toTopOf="@+id/editfooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPriceET"
        app:layout_constraintVertical_bias="0.116" />

    <Button
        android:id="@+id/editPubBtn"
        android:layout_width="79dp"
        android:layout_height="84dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorFontOffWhite"
        android:drawableTop="@drawable/add48"
        android:onClick="saveBeer"
        android:text="@string/saveBeerBtn"
        app:layout_constraintBottom_toTopOf="@+id/editfooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRatingBar"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/editTitleTV"
        android:layout_width="206dp"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="Title"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/editNameTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/editFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:onClick="toggle"
        app:layout_constraintBottom_toTopOf="@+id/editNameET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/favourites72" />

</android.support.constraint.ConstraintLayout>